# genealogical_tree

./: .gitignore  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
genealogy/: admin.py  forms.py  models.py  urls.py  views.py
genealogy/migrations/: 0001_initial.py  0002_alter_tree_created_at.py
genealogy/templates/genealogy/: home.html
genealogy/templates/genealogy/events/: add_participant.html  create_event_for_person.html  create_events_for_tree.html  view_event.html
genealogy/templates/genealogy/person/: add_person.html  view_person.html
genealogy/templates/genealogy/tree/: create_tree.html  trees.html  view_tree.html
